--- a/app/views/bookings/indexadmin.html.erb
+++ b/app/views/bookings/indexadmin.html.erb
@@ -1,44 +1,114 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title><%= @page_title %></title>
-    <%= csrf_meta_tags %>
-    <%= stylesheet_link_tag    'bookings', media: 'all', 'data-turbolinks-track' => 'reload', 'data-turbolinks-eval' =>'false'%>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track' => 'reload' %>
-  </head>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <title><%= @page_title %></title>
+  <%= csrf_meta_tags %>
+  <%= stylesheet_link_tag    'bookings', media: 'all', 'data-turbolinks-eval' =>'false'%>
+  <%= javascript_include_tag 'application'%>
+</head>
 
-  <body>
-    <section id="main-content">
-      <section class="wrapper">
-        <h3>All Bookings</h3>
-          <div class="row mt mb">
-            <div class="col-md-12">
-              <section class="task-panel tasks-widget">
-  <!--              <div class="panel-heading">
-                  <div class="pull-left"><h5><i class="fa fa-tasks"></i> All Bookings</h5></div>
-                  <br>
-                </div>-->
-                <div class="panel-body">
-                  <div class="task-content">
-                    <ul id='sortable' class="task-list <%= "sortable" if logged_in?(:labor_staff) %> ">
-                      <%= render @bookings %>
+<body>
+<section id="main-content">
+  <section class="wrapper">
+    <h3>All Bookings</h3>
+    <div class="row mt mb">
+      <div class="col-sm-2">
+        <section class="task-panel tasks-widget">
+          <div class="panel-heading">
+            <div class="pull-left"> Pending </div>
+          </div>
+          <div class="panel-body">
+            <div class="task-content">
+              <ul id='sortable' class="task-list <%= "sortable" if logged_in?(:labor_staff) %> ">
+                <%= render @bookings_pending %>
 
-                    </ul>
-                  </div>
-                  <div class=" add-task-row">
-                    <%= link_to "Add New Booking", new_booking_path, class: "btn btn-success btn-sm pull-left" if logged_in?(:labor_staff)  %>
-                    <a class="btn btn-default btn-sm pull-right" href="todo_list.html#">See All Tasks</a>
-                  </div>
-                </div>
-              </section>
-            </div><!--/col-md-12 -->
-          </div><!-- /row -->
-      </section><! --/wrapper -->
-    </section><!-- /MAIN CONTENT -->
+              </ul>
+            </div>
+          </div>
+        </section>
+      </div><!--/col-sm-2 -->
+      <div class="col-sm-2">
+        <section class="task-panel tasks-widget">
+          <div class="panel-heading">
+            <div class="pull-left"> Confirmed </div>
+          </div>
+          <div class="panel-body">
+            <div class="task-content">
+              <ul id='sortable' class="task-list <%= "sortable" if logged_in?(:labor_staff) %> ">
+                <%= render @bookings_confirmed %>
 
-  </body>
+              </ul>
+            </div>
+          </div>
+        </section>
+      </div><!--/col-sm-2 -->
+      <div class="col-sm-2">
+        <section class="task-panel tasks-widget">
+          <div class="panel-heading">
+            <div class="pull-left"> Claimed </div>
+          </div>
+          <div class="panel-body">
+            <div class="task-content">
+              <ul id='sortable' class="task-list <%= "sortable" if logged_in?(:labor_staff) %> ">
+                <%= render @bookings_claimed %>
+
+              </ul>
+            </div>
+          </div>
+        </section>
+      </div><!--/col-sm-2 -->
+      <div class="col-sm-2">
+        <section class="task-panel tasks-widget">
+          <div class="panel-heading">
+            <div class="pull-left"> Unclaimed </div>
+          </div>
+          <div class="panel-body">
+            <div class="task-content">
+              <ul id='sortable' class="task-list <%= "sortable" if logged_in?(:labor_staff) %> ">
+                <%= render @bookings_unclaimed %>
+
+              </ul>
+            </div>
+          </div>
+        </section>
+      </div><!--/col-sm-2 -->
+      <div class="col-sm-2">
+        <section class="task-panel tasks-widget">
+          <div class="panel-heading">
+            <div class="pull-left"> Overdue </div>
+          </div>
+          <div class="panel-body">
+            <div class="task-content">
+              <ul id='sortable' class="task-list <%= "sortable" if logged_in?(:labor_staff) %> ">
+                <%= render @bookings_overdue %>
+
+              </ul>
+            </div>
+          </div>
+        </section>
+      </div><!--/col-sm-2 -->
+      <div class="col-sm-2">
+        <section class="task-panel tasks-widget">
+          <div class="panel-heading">
+            <div class="pull-left"> Returned </div>
+          </div>
+          <div class="panel-body">
+            <div class="task-content">
+              <ul id='sortable' class="task-list <%= "sortable" if logged_in?(:labor_staff) %> ">
+                <%= render @bookings_returned %>
+
+              </ul>
+            </div>
+          </div>
+        </section>
+      </div><!--/col-sm-2 -->
+    </div><!-- /row -->
+  </section><! --/wrapper -->
+</section><!-- /MAIN CONTENT -->
+
+</body>
 
 </html>
 
