--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -9,7 +9,8 @@
                     <p>Return Date: <%= @booking.return_date %></p>
                     <p>Message: <%= @booking.message %></p>
                     <%= link_to 'Edit',edit_booking_path(@booking), class: "btn btn-info" %>
-                    <%= link_to 'Back', bookings_path, class: "btn btn-info" %>
+                    <%= link_to 'Back',bookings_path, class: "btn btn-info" if !logged_in?(:user) %>
+                    <%= link_to 'Back',indexadmin_bookings_path, class: "btn btn-info" if logged_in?(:user) %>
                 </div>
                 <div class="col-md-6">
                     <h3 class="card-title">Booking Items </h3>
