--- a/app/views/equipment/index.html.erb
+++ b/app/views/equipment/index.html.erb
@@ -38,20 +38,6 @@
       </ul>
     </nav>
     <!-- End of side-bar -->
-    <%= render "shared/application_nav" %>
-    <%= yield %>
-    <%= link_to "Register", new_user_session_path, class: "btn btn-secondary add-new" if current_user.is_a?(GuestUser) %>
-    <%= link_to "Login", new_user_session_path, class: "btn btn-success login" if current_user.is_a?(GuestUser) %>
-    <%= link_to "Add New Equipment", new_equipment_path, class: "btn btn-secondary add-new" if logged_in?(:labor_staff) %>
-    <div class="row equipment-container">
-      <% @labor_items.each do |labor_item| %>
-        <%= render partial: 'labor_item', collection: @labor_items, booking_item: @booking_item %>
-      <% end %>
-    </div>
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
-    <% if session[:source] %>
-      <p> Thanks for visiting Mylab from <%= session[:source] %> </p>
-    <% end %>
+    <%= render 'equipment_view' %>
   </body>
 </html>
