--- a/app/views/shared/_application_nav.html.erb
+++ b/app/views/shared/_application_nav.html.erb
@@ -8,7 +8,7 @@
         <%= link_to "Equipment", equipment_index_path, class: 'nav-link' %>
         <%= link_to "Projects", projects_path, class: 'nav-link' %>
         <%= link_to "My List", mylist_path, class: 'nav-link'%>
-        <%= link_to "Booking", bookings_path, class: 'nav-link' if logged_in?(:user) %>
+        <%= link_to "Booking", bookings_path, class: 'nav-link' if (logged_in?(:user) && !logged_in?(:labor_staff))%>
         <%= link_to "Booking", indexadmin_bookings_path, class: 'nav-link' if logged_in?(:labor_staff) %>
         <%= login_helper 'nav-link'  %>
         <form class="nav-link">
