--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,7 @@
  * It is generally better to create a new file per style scope.
  *
  *= require bootstrap-datepicker
+ *= require fullcalendar
  */
 
 // Custom bootstrap variables must be set or imported *before* bootstrap.
