--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -7,4 +7,24 @@
 <%= link_to 'Edit', edit_project_path(@project), class: "btn btn-secondary" if logged_in?(:labor_staff) %>
 <%= link_to 'Back', projects_path, class: "btn btn-info" %>
 
+<div class="row ml">
+  <% if @usually_booked_items.size == 0  %>
+      <div class="headline">No equipment has been booked for this project. Be the first?</div>
+      <%= link_to "To Equipment", equipment_index_path, class: "btn btn-info ml" %>
+  <% else %>
+      <div class="headline">Student who choose this project usually book:</div>
+  <% end %>
+</div>
+
+<div class="row ml">
+  <% @usually_booked_items.each do |usually_booked_item| %>
+      <div class="home-card">
+        <%= image_tag usually_booked_item.thumb_image unless usually_booked_item.thumb_image.nil? %>
+        <p class="home-card-text"><%= link_to usually_booked_item.name, equipment_path(usually_booked_item)  %></p>
+        <p class="home-card-text"><%= usually_booked_item.description %></p>
+      </div>
+  <% end %>
+</div>
+
+
 
