--- a/app/views/shared/_application_nav.html.erb
+++ b/app/views/shared/_application_nav.html.erb
@@ -1,20 +1,39 @@
 
-      <nav class="navbar navbar-toggleable-md navbar-inverse fixed-top bg-inverse">
-        <h4 class="mylab"><%= link_to "MyLab", root_path %></h4>
-        <nav class="nav nav-masthead">
-        <%= link_to "Home", root_path, class: 'nav-link' %>
-        <%= link_to "About", about_path, class: 'nav-link' %>
-        <%= link_to "Contact", contact_path, class: 'nav-link' %>
-        <%= link_to "Equipment", equipment_index_path, class: 'nav-link' %>
-        <%= link_to "Projects", projects_path, class: 'nav-link' %>
-        <%= link_to "My List", mylist_path, class: 'nav-link'%>
-        <%= link_to "Booking", bookings_path, class: 'nav-link' if logged_in?(:user) %>
-        <%= link_to "Booking", indexadmin_bookings_path, class: 'nav-link' if logged_in?(:labor_staff) %>
-        <%= login_helper 'nav-link'  %>
-        <form class="nav-link">
-          <input class="form-control mr-sm-2" type="text" placeholder="🔍">
-        </form>
-        </nav>
+      <nav class="navbar navbar-expand-lg navbar-inverse fixed-top bg-inverse">
+        <%= link_to "MyLab", root_path, class: 'navbar-brand mylab' %>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainnav" aria-controls="mainnav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="mainnav">
+            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                <li class="nav-item">
+                    <%= link_to "Home", root_path, class: 'nav-link' %>
+                </li>
+                <li class="nav-item">
+                    <%= link_to "About", about_path, class: 'nav-link' %>
+                </li>
+                <li class="nav-item">
+                    <%= link_to "Contact", contact_path, class: 'nav-link' %>
+                </li>
+                <li class="nav-item">
+                    <%= link_to "Equipment", equipment_index_path, class: 'nav-link' %>
+                </li>
+                <li class="nav-item">
+                    <%= link_to "Projects", projects_path, class: 'nav-link' %>
+                </li>
+                <li class="nav-item">
+                    <%= link_to "My List", mylist_path, class: 'nav-link'%>
+                </li>
+                <li class="nav-item">
+                    <%= link_to "Booking", bookings_path, class: 'nav-link' if logged_in?(:user) %>
+                    <%= link_to "Booking", indexadmin_bookings_path, class: 'nav-link' if logged_in?(:labor_staff) %>
+                </li>
+                <%= login_helper %>
+            </ul>
+            <form class="form-inline my-2 my-lg-0">
+              <input class="form-control mr-sm-2" type="text" placeholder="Search">
+            </form>
+        </div>
     </nav>
  
 
