--- a/app/views/layouts/admin_board.html.erb
+++ b/app/views/layouts/admin_board.html.erb
@@ -6,17 +6,21 @@
     <title><%= @page_title %></title>
     <%= csrf_meta_tags %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application'%>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
     <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
     <% if logged_in?(:labor_staff) %>
       <%= render "shared/admin_application_nav"%>
     <% else%>
       <%= render "shared/application_nav"%>
     <% end %>
+
+    <%= login_helper %>
     <%= yield %>
+
     <% if session[:source] %>
       <p> Thanks for visiting Mylab from <%= session[:source] %> </p>
     <% end %>
