--- a/app/views/layouts/list.html.erb
+++ b/app/views/layouts/list.html.erb
@@ -1,21 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title><%= @page_title %></title>
     <%= csrf_meta_tags %>
+
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application'%>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
     <p class="notice"><%= notice %></p>
-    <% if logged_in?(:labor_staff) %>
-      <%= render "shared/admin_application_nav"%>
-    <% else%>
-      <%= render "shared/application_nav"%>
-    <% end %>
+    <p class="alert"><%= alert %></p>
+
+    <%= render "shared/application_nav"%>
+    <%= render 'layouts/list_text' %>
     <%= yield %>
     <% if session[:source] %>
       <p> Thanks for visiting Mylab from <%= session[:source] %> </p>
