--- a/app/views/layouts/project.html.erb
+++ b/app/views/layouts/project.html.erb
@@ -1,22 +1,25 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title><%= @page_title %></title>
     <%= csrf_meta_tags %>
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application'%>
+    <%= stylesheet_link_tag    'projects', media: 'all', 'data-turbolinks-track': 'reload' %>
+    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
     <p class="notice"><%= notice %></p>
+    <p class="alert"><%= alert %></p>
+    
+    <%= login_helper %>
+
+    <%= yield %>
     <% if logged_in?(:labor_staff) %>
       <%= render "shared/admin_application_nav"%>
     <% else%>
       <%= render "shared/application_nav"%>
     <% end %>
-    <%= yield %>
+
     <% if session[:source] %>
       <p> Thanks for visiting Mylab from <%= session[:source] %> </p>
     <% end %>
